CS_SBOX_20150209_01/Metadata/unpackaged/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>CRM_Product_Name__c</fullName>
        <description>Created by LM on 2/18/14 for Phase2</description>
        <label>CRM Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Subfamily__c</fullName>
        <formula>TEXT(Product2.Sub_Family__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Subfamily</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_End_Date__c</fullName>
        <description>Create by LM on 12/12/13</description>
        <label>Quote End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Start_Date__c</fullName>
        <description>Created by LM on 12/12/13</description>
        <label>Quote Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__CreditProductId__c</fullName>
        <description>ID of upgrade credit product for this asset.</description>
        <formula>Product2.SBQQ__UpgradeCredit__c</formula>
        <label>Credit Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CurrentSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription that currently covers this asset. This field is only populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</description>
        <inlineHelpText>Subscription that currently covers this asset. Automatically populated if one and only one subscription covers this asset. Renewals will overwrite with new subscription.</inlineHelpText>
        <label>Current Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Covered Assets</relationshipLabel>
        <relationshipName>CoveredAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote line that generated this asset.</description>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset that represents package that requires this asset.</description>
        <inlineHelpText>Asset that represents package that requires this asset.</inlineHelpText>
        <label>Required By</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Required Assets</relationshipLabel>
        <relationshipName>RequiredAssets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Contract_Number__c</fullName>
        <description>Created by LM on 5/16/2014 for Phase2 (for Bryan Lehner)</description>
        <label>SFDC Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STX_Contract_Number__c</fullName>
        <description>Created by LM on 5/16/2014 for Phase2 (for Bryan Lehner)</description>
        <label>STX Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STX_Service_Detail_Id__c</fullName>
        <description>Added by LM on12/12/13 for da rollout</description>
        <label>STX Service Detail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>